# gravity

./: .env  .env.local.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
agents/: family_docs.py  server.py
server/: main.py  pipeline.py
server/routes/: chat.py
source_obsidian/: embedder.py  ingest.py  loader.py  store.py
tests/: conftest.py
tests/agents/: test_family_docs.py
tests/server/: test_chat_route.py  test_pipeline.py
tests/source_obsidian/: test_embedder.py  test_loader.py  test_store.py
ui/: index.html  package.json
ui/src/: App.tsx
ui/src/components/: Chat.tsx
